--- a/frontend/src/locales/ko.json
+++ b/frontend/src/locales/ko.json
@@ -9,7 +9,15 @@
     "oss_attributions": "오픈 소스 속성",
     "other_attributions": "추가 속성은 README 파일에서 찾을 수 있습니다.",
     "source_code": "소스 코드",
-    "generic_attributions": "Adventurelog에 로그인하여 활성화 된 통합 및 서비스에 대한 속성을보십시오."
+    "generic_attributions": "Adventurelog에 로그인하여 활성화 된 통합 및 서비스에 대한 속성을보십시오.",
+    "attributions": "속성",
+    "developer": "개발자",
+    "license_info": "특허",
+    "sponsor": "스폰서",
+    "thank_you": "Adventurelog를 사용해 주셔서 감사합니다!",
+    "version": "버전",
+    "view_changelog": "changelog를 봅니다",
+    "view_license": "라이센스보기"
   },
   "adventures": {
     "actions": "행동",
@@ -250,7 +258,8 @@
     "visit_calendar": "캘린더를 방문하십시오",
     "wiki_location_desc": "위치 이름과 일치하는 Wikipedia 기사에서 발췌 한 내용을 가져옵니다.",
     "will_be_marked_location": "위치가 저장되면 방문한대로 표시됩니다.",
-    "no_locations_found": "발견 된 위치는 없습니다"
+    "no_locations_found": "발견 된 위치는 없습니다",
+    "image_modal_navigate": "화살표 키를 사용하거나 클릭하여 탐색하십시오"
   },
   "auth": {
     "confirm_password": "비밀번호 확인",
