--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -43,7 +43,15 @@
     "nominatim_2": "Их данные лицензированы под лицензией ODbL.",
     "other_attributions": "Дополнительные атрибуции можно найти в файле README.",
     "generic_attributions": "Войдите в AdventureLog, чтобы просмотреть атрибуции для включённых интеграций и сервисов.",
-    "close": "Закрыть"
+    "close": "Закрыть",
+    "attributions": "Атрибуты",
+    "developer": "Разработчик",
+    "license_info": "Лицензия",
+    "sponsor": "Спонсор",
+    "thank_you": "Спасибо за использование AdventureLog!",
+    "version": "Версия",
+    "view_changelog": "Посмотреть изменение изменений",
+    "view_license": "Просмотреть лицензию"
   },
   "home": {
     "hero_1": "Откройте для себя самые захватывающие приключения мира",
@@ -302,7 +310,8 @@
     "visit_calendar": "Посетите календарь",
     "wiki_location_desc": "Вытягивает отрывок из статьи Википедии, соответствующей названию места.",
     "will_be_marked_location": "будет отмечен по посещению после сохранения местоположения.",
-    "no_locations_found": "Никаких мест не найдено"
+    "no_locations_found": "Никаких мест не найдено",
+    "image_modal_navigate": "Используйте клавиши со стрелками или нажмите, чтобы перемещаться"
   },
   "worldtravel": {
     "country_list": "Список стран",
