--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -43,7 +43,15 @@
     "other_attributions": "其他声明可以在 README 文件中找到。",
     "source_code": "源代码",
     "close": "关闭",
-    "generic_attributions": "登录到AdventureLog以查看启用集成和服务的归因。"
+    "generic_attributions": "登录到AdventureLog以查看启用集成和服务的归因。",
+    "attributions": "归因",
+    "developer": "开发人员",
+    "license_info": "执照",
+    "sponsor": "赞助",
+    "thank_you": "感谢您使用冒险！",
+    "version": "版本",
+    "view_changelog": "查看ChangElog",
+    "view_license": "查看许可证"
   },
   "home": {
     "desc_1": "轻松发现、规划和探索",
@@ -302,7 +310,8 @@
     "visit_calendar": "访问日历",
     "wiki_location_desc": "从Wikipedia文章中提取摘录，符合该位置的名称。",
     "will_be_marked_location": "保存位置后，将被标记为访问。",
-    "no_locations_found": "找不到位置"
+    "no_locations_found": "找不到位置",
+    "image_modal_navigate": "使用箭头键或单击以导航"
   },
   "auth": {
     "forgot_password": "忘记密码？",
