--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -523,7 +523,19 @@
     "secure_your_account": "Proteggere il tuo account",
     "setup_required": "Setup richiesto",
     "verify_setup": "Verifica la configurazione",
-    "whats_included": "Cosa è incluso"
+    "whats_included": "Cosa è incluso",
+    "backup_your_data": "Eseguire il backup dei tuoi dati",
+    "backup_your_data_desc": "Scarica un backup completo dei dati dell'account tra cui posizioni, raccolte, media e visite.",
+    "data_override_acknowledge": "Riconosco che questo sovrascriverà tutti i miei dati esistenti",
+    "data_override_acknowledge_desc": "Questa azione è irreversibile e sostituirà tutte le posizioni, le raccolte e le visite nel tuo account.",
+    "data_override_warning": "Avviso di sovraccarico dei dati",
+    "data_override_warning_desc": "Il ripristino dei dati sostituirà completamente tutti i dati esistenti (inclusi nel backup) nel tuo account. \nQuesta azione non può essere annullata.",
+    "integrations_settings": "Impostazioni integrazioni",
+    "media": "Media",
+    "restore_data": "Ripristina i dati",
+    "restore_data_desc": "Carica un file di backup per ripristinare i dati.",
+    "select_backup_file": "Seleziona il file di backup",
+    "world_travel_visits": "Visite di viaggio nel mondo"
   },
   "checklist": {
     "checklist_delete_error": "Errore durante l'eliminazione della lista di controllo",
@@ -748,5 +760,6 @@
     "location": "Posizione",
     "locations": "Luoghi",
     "my_locations": "Le mie posizioni"
-  }
+  },
+  "settings_download_backup": "Scarica il backup"
 }
