--- a/frontend/src/locales/no.json
+++ b/frontend/src/locales/no.json
@@ -523,7 +523,19 @@
     "secure_your_account": "Sikre kontoen din",
     "setup_required": "Oppsett kreves",
     "verify_setup": "Bekreft oppsett",
-    "whats_included": "Hva som er inkludert"
+    "whats_included": "Hva som er inkludert",
+    "backup_your_data": "Sikkerhetskopiere dataene dine",
+    "backup_your_data_desc": "Last ned en komplett sikkerhetskopi av kontodataene dine, inkludert steder, samlinger, media og besøk.",
+    "data_override_acknowledge": "Jeg erkjenner at dette vil overstyre alle mine eksisterende data",
+    "data_override_acknowledge_desc": "Denne handlingen er irreversibel og vil erstatte alle steder, samlinger og besøk på kontoen din.",
+    "data_override_warning": "Data overstyrer advarsel",
+    "data_override_warning_desc": "Gjenoppretting av data vil erstatte alle eksisterende data fullstendig (som er inkludert i sikkerhetskopien) på kontoen din. \nDenne handlingen kan ikke angres.",
+    "integrations_settings": "Integrasjoner Innstillinger",
+    "media": "Media",
+    "restore_data": "Gjenopprett data",
+    "restore_data_desc": "Last opp en sikkerhetskopifil for å gjenopprette dataene dine.",
+    "select_backup_file": "Velg sikkerhetskopifil",
+    "world_travel_visits": "Verdens reisebesøk"
   },
   "collection": {
     "collection_created": "Samling opprettet!",
@@ -748,5 +760,6 @@
     "location": "Sted",
     "locations": "Lokasjoner",
     "my_locations": "Mine lokasjoner"
-  }
+  },
+  "settings_download_backup": "Last ned sikkerhetskopi"
 }
