--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -523,7 +523,19 @@
     "secure_your_account": "Защитите свою учетную запись",
     "setup_required": "Настройка требуется",
     "verify_setup": "Проверьте настройку",
-    "whats_included": "Что включено"
+    "whats_included": "Что включено",
+    "backup_your_data": "Резервную копию ваших данных",
+    "backup_your_data_desc": "Загрузите полное резервное копирование данных вашей учетной записи, включая местоположения, коллекции, медиа и посещения.",
+    "data_override_acknowledge": "Я признаю, что это переопределит все мои существующие данные",
+    "data_override_acknowledge_desc": "Это действие необратимо и заменит все местоположения, коллекции и посещения в вашем аккаунте.",
+    "data_override_warning": "Предупреждение о переопределении данных",
+    "data_override_warning_desc": "Восстановление данных полностью заменит все существующие данные (которые включены в резервную копию) в вашу учетную запись. \nЭто действие не может быть отменено.",
+    "integrations_settings": "Настройки интеграции",
+    "media": "СМИ",
+    "restore_data": "Восстановить данные",
+    "restore_data_desc": "Загрузите файл резервного копирования, чтобы восстановить ваши данные.",
+    "select_backup_file": "Выберите файл резервного копирования",
+    "world_travel_visits": "Всемирные поездки"
   },
   "collection": {
     "collection_created": "Коллекция успешно создана!",
@@ -748,5 +760,6 @@
     "location": "Расположение",
     "locations": "Локации",
     "my_locations": "Мои локации"
-  }
+  },
+  "settings_download_backup": "Скачать резервную копию"
 }
