feat: add Strava integration with OAuth flow and activity management
- Implemented IntegrationView for listing integrations including Immich, Google Maps, and Strava.
- Created StravaIntegrationView for handling OAuth authorization and token exchange.
- Added functionality to refresh Strava access tokens when needed.
- Implemented endpoints to fetch user activities from Strava and extract essential information.
- Added Strava logo asset and integrated it into the frontend settings page.
- Updated settings page to display Strava integration status.
- Enhanced location management to include trails with create, edit, and delete functionalities.
- Updated types and localization files to support new features.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -316,7 +316,9 @@
     "leave_collection": "Leave Collection",
     "leave": "Leave",
     "leave_collection_warning": "Are you sure you want to leave this collection? Any locations you added will be unlinked and remain in your account.",
-    "loading_collections": "Loading collections..."
+    "loading_collections": "Loading collections...",
+    "quick_start": "Quick Start",
+    "details": "Details"
   },
   "worldtravel": {
     "country_list": "Country List",
@@ -782,6 +784,7 @@
     "decline": "Decline",
     "accept": "Accept",
     "invited_on": "Invited on",
-    "no_invites_desc": "Make sure your profile is public so users can invite you."
+    "no_invites_desc": "Make sure your profile is public so users can invite you.",
+    "by": "by"
   }
 }
